unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Suspended_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Suspended_Date__c</fullName>
    <description>The date the Subscription was suspended.</description>
    <inlineHelpText>The date the Subscription was suspended.</inlineHelpText>
    <label>Suspended Date</label>
    <type>Date</type>
</CustomField>