unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Suspended_Reason__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Suspended_Reason__c</fullName>
    <description>** Conditionally Required System Calculated Override ** Select the most appropriate reason for suspending the Subscription. Required when a Subscription status is &quot;Suspended&quot;.</description>
    <inlineHelpText>** Conditionally Required System Calculated Override ** Select the most appropriate reason for suspending the Subscription. Required when a Subscription status is &quot;Suspended&quot;.</inlineHelpText>
    <label>Suspended Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Past Due</fullName>
            </value>
            <value>
                <fullName>Payment Method Declined</fullName>
            </value>
            <value>
                <fullName>Payment Method Expired</fullName>
            </value>
            <value>
                <fullName>Payment Method Inactive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>