unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__System_Refresh__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__System_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Refresh Subscription fields with updated data as well as update related Invoices and Scheduled Payments (if applicable) related to the Subscription.</description>
    <inlineHelpText>Refresh Subscription fields with updated data as well as update related Invoices and Scheduled Payments (if applicable) related to the Subscription.</inlineHelpText>
    <label>Refresh</label>
    <type>Checkbox</type>
</CustomField>