unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Term_Active_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term_Active_Assignments__c</fullName>
    <description>System Calculated ** Counts the number of assignments that are marked active for the term.</description>
    <inlineHelpText>System Calculated ** Counts the number of assignments that are marked active for the term.</inlineHelpText>
    <label>Term Active Assignments</label>
    <summarizedField>OrderApi__Renewal__c.OrderApi__Active_Assignments__c</summarizedField>
    <summaryFilterItems>
        <field>OrderApi__Renewal__c.OrderApi__Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>