unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Term_Assignments_Allowed__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term_Assignments_Allowed__c</fullName>
    <description>System Calculated ** The number of Assignments allowed for the term.</description>
    <inlineHelpText>System Calculated ** The number of Assignments allowed for the term.</inlineHelpText>
    <label>Term Assignments Allowed</label>
    <summarizedField>OrderApi__Renewal__c.OrderApi__Assignments_Allowed__c</summarizedField>
    <summaryFilterItems>
        <field>OrderApi__Renewal__c.OrderApi__Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>