unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Term_Dues_Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term_Dues_Total__c</fullName>
    <description>System Calculated ** The sum of the &quot;Total&quot; field for all related Subscription Lines related to the active Term.</description>
    <inlineHelpText>System Calculated ** The sum of the &quot;Total&quot; field for all related Subscription Lines related to the active Term.</inlineHelpText>
    <label>Term Dues Total</label>
    <summarizedField>OrderApi__Renewal__c.OrderApi__Dues_Total__c</summarizedField>
    <summaryFilterItems>
        <field>OrderApi__Renewal__c.OrderApi__Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>