unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term_Start_Date__c</fullName>
    <description>System Calculated ** The start date of the active Term.</description>
    <inlineHelpText>System Calculated ** The start date of the active Term.</inlineHelpText>
    <label>Term Start Date</label>
    <summarizedField>OrderApi__Renewal__c.OrderApi__Term_Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>OrderApi__Renewal__c.OrderApi__Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>