unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Upgraded_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Upgraded_Date__c</fullName>
    <description>** System Calculated Override ** The date the Subscription was upgraded to another &quot;Subscription&quot; Item.</description>
    <inlineHelpText>** System Calculated Override ** The date the Subscription was upgraded to another &quot;Subscription&quot; Item.</inlineHelpText>
    <label>Upgraded Date</label>
    <type>Date</type>
</CustomField>