unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Upgraded_Subscription__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Upgraded_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Defines the related upgraded subscription.</description>
    <inlineHelpText>** System Calculated Override ** Defines the related upgraded subscription.</inlineHelpText>
    <label>Upgraded Subscription</label>
    <referenceTo>OrderApi__Subscription__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>