unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Valid_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Valid_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valid if the linked Payment Method is valid -- determined by Payment Method expiration and the result (Success or Decline) of the last E-Payment related to the Payment Method. Defaults unchecked if no Payment Method linked.</description>
    <inlineHelpText>Valid if the linked Payment Method is valid -- determined by Payment Method expiration and the result (Success or Decline) of the last E-Payment related to the Payment Method. Defaults unchecked if no Payment Method linked.</inlineHelpText>
    <label>Valid Payment Method</label>
    <type>Checkbox</type>
</CustomField>