unpackaged/main/default/objects/OrderApi__Subscription__c/listViews/Memberships_Expiring_30_Days.listView-meta.xml
<ListView>
    <fullName>Memberships_Expiring_30_Days</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Customer_Link__c</columns>
    <columns>OrderApi__Item__c</columns>
    <columns>OrderApi__Current_Term_End_Date__c</columns>
    <columns>OrderApi__Days_To_Lapse__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderApi__Term_End_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>Memberships Expiring 30 Days</label>
</ListView>