unpackaged/main/default/objects/OrderApi__Subscription__c/listViews/New_Memberships.listView-meta.xml
<ListView>
    <fullName>New_Memberships</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OrderApi__Current_Term_Start_Date__c</columns>
    <columns>OrderApi__Current_Term_End_Date__c</columns>
    <columns>OrderApi__Subscription_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderApi__Activated_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>New Memberships</label>
</ListView>