unpackaged/main/default/objects/OrderApi__Subscription__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Customer_Link__c</columns>
    <columns>OrderApi__Status__c</columns>
    <columns>OrderApi__Subscription_Plan__c</columns>
    <columns>OrderApi__Item__c</columns>
    <columns>OrderApi__Activated_Date__c</columns>
    <columns>OrderApi__Is_Active__c</columns>
    <columns>OrderApi__Cancelled_Date__c</columns>
    <columns>OrderApi__Cancelled_Reason__c</columns>
    <columns>OrderApi__Term_Start_Date__c</columns>
    <columns>OrderApi__Last_System_Run__c</columns>
    <columns>OrderApi__Last_Renewed_Date__c</columns>
    <columns>OrderApi__Days_To_Lapse__c</columns>
    <columns>OrderApi__Valid_Payment_Method__c</columns>
    <columns>OrderApi__Enable_Auto_Renew__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderApi__Enable_Auto_Renew__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OrderApi__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>OrderApi__Subscription_Plan__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>